realized the delete function

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -50,7 +50,7 @@
                                 <span class="with-love">
                                     <i class="fa fa-heartbeat"></i>
                                 </span>
-                                <span class="author" itemprop="copyrightHolder">Slash</span>
+                                <span class="author" itemprop="copyrightHolder" th:value="#username">Slash</span>
                             </div>
                             <label>优雅的入门Spring Boot框架，实现简单的CRUD。页面使用Vue和ElementUI制作</label>
                         </div>
